examples/spanned_err.run.stderr
Error: examples/spanned_err.rs:4:9: "kaboom"
